# kratzbaum

./: .gitignore  AGENTS.md  GEMINI.md  README.md  dev.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  deps.py  identify.py  plants.py  pots.py  reminders.py  settings.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  identification.py  plant.py  pot.py  push.py  reminder.py  settings.py
backend/app/scheduler/: jobs.py
backend/app/services/: files.py  plantnet.py  push.py  reminders.py
backend/tests/: conftest.py  test_api.py  test_identify_api.py  test_reminders.py  test_scheduler_jobs.py  test_security.py  test_services_files.py  test_services_plantnet.py  test_services_reminders.py  test_settings_api.py
docs/: 00_project_context.md
docs/01_features/: F01_plant_inventory.md  F02_reminders.md  F03_pots.md  F04_plant_recognition.md  F05_edit_plants.md
docs/02_technical/: api_contracts.md  architecture_diagram.md  database_schema.md  implementation_plan_identify_spec_alignment.md
docs/03_ui_ux/: style_guide.md  user_flows.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/lib/api/: client.ts  plants.ts  pots.ts  reminders.ts  settings.ts  types.ts
frontend/src/lib/components/: PlantCard.svelte  PlantCard.test.ts  PotCard.svelte  PotCard.test.ts
frontend/src/lib/services/: pot-assignment.ts
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/test/: setup.ts
plans/: 2026-02-13-assign-existing-plant-to-existing-pot.md  2026-02-13-care-action-feedback-and-color-fixes.md  2026-02-13-existing-plant-identification-flow.md  2026-02-13-identify-plantnet-key-management.md  2026-02-13-identify-result-text-copyability.md  2026-02-13-link-pot-detail-from-plant-page.md  2026-02-13-plant-photo-primary-selection.md
(+10 files in other folders)
